--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.6"
+    "@astrojs/react": "^3.6.2",
+    "@octokit/rest": "^21.0.2",
+    "astro": "^4.15.6",
+    "gray-matter": "^4.0.3",
+    "quill": "^2.0.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
