--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gray-matter": "^4.0.3",
     "quill": "^2.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1"
   }
 }
