--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@octokit/rest": "^21.0.2",
     "astro": "^4.15.6",
     "gray-matter": "^4.0.3",
+    "node-buffer": "^1.0.3",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
